<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".perfil">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/titulo2"
                android:textSize="@dimen/tamaño_letra"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivFoto"
                android:layout_width="match_parent"
                android:layout_height="345dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/espacio_top"
                android:text="@string/nombre"
                android:textSize="@dimen/tamaño_letra_registro" />

            <TextView
                android:id="@+id/tvEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/espacio_top"
                android:text="@string/edad"
                android:textSize="@dimen/tamaño_letra_registro" />

            <TextView
                android:id="@+id/tvAnimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/espacio_top"
                android:text="@string/animal"
                android:textSize="@dimen/tamaño_letra_registro" />

            <TextView
                android:id="@+id/tvAlimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/espacio_top"
                android:text="@string/alimento"
                android:textSize="@dimen/tamaño_letra_registro" />

            <Button
                android:id="@+id/btnOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnOk" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>